tests-integration/fixtures/checking/1773152280_derive_newtype_invalid_skolem_layout/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
empty :: forall (@f :: Type -> Type). Empty (f :: Type -> Type) => (f :: Type -> Type) Int
Vector ::
  forall (t :: Type) (@n :: (t :: Type)) (@a :: Type).
    Array (a :: Type) -> Vector @(t :: Type) (n :: (t :: Type)) (a :: Type)
InvalidVector ::
  forall (t :: Type) (@a :: Type) (@n :: (t :: Type)).
    Array (a :: Type) -> InvalidVector @(t :: Type) (a :: Type) (n :: (t :: Type))

Types
Empty :: (Type -> Type) -> Constraint
Vector :: forall (t :: Type). (t :: Type) -> Type -> Type
InvalidVector :: forall (t :: Type). Type -> (t :: Type) -> Type

Classes
class forall (f :: Type -> Type). Empty (f :: Type -> Type)
  empty :: forall (@f :: Type -> Type). Empty (f :: Type -> Type) => (f :: Type -> Type) Int

Instances
instance Empty Array

Derived
derive forall (t :: Type) (t1 :: (t :: Type)). Empty (Vector @(t :: Type) (t1 :: (t :: Type)))
derive Empty (InvalidVector @Type Int)

Roles
Vector = [Phantom, Representational]
InvalidVector = [Representational, Phantom]

Diagnostics
error[InvalidNewtypeDeriveSkolemArguments]: Cannot derive newtype instance where skolemised arguments do not appear trailing in the inner type.
  --> 13:1..13:50
   |
13 | derive newtype instance Empty (InvalidVector Int)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
